<resources>
    <string name="app_name">2WingsPlay</string>

    <string name="title_home">Home</string>
    <string name="title_shield">Shield</string>
    <string name="title_shop">Shop</string>
    <string name="title_setting">Setting</string>
    <string name="GameList">게임 목록</string>
    <string name="GameNotice">게임 공지사항</string>
    <string name="GameUpdateNote">게임 패치노트</string>
    <string name="RemainingTime">남은 시간</string>
    <string name="AuthenticationNumber">인증 번호</string>
</resources>