<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.twowingsworld.a2wingsplay.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shield"
        android:name="com.twowingsworld.a2wingsplay.fragments.ShieldFragment"
        android:label="@string/title_shield"
        tools:layout="@layout/fragment_shield" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.twowingsworld.a2wingsplay.fragments.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.twowingsworld.a2wingsplay.fragments.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_shop" />
</navigation>