<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/Img_HomeF_PlayerIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/Recycler_HomeF_EventBanner"
            app:layout_constraintEnd_toStartOf="@+id/TXT_HomeF_PlayerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/TXT_HomeF_PlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/Img_HomeF_PlayerIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Img_HomeF_PlayerIcon"
            app:layout_constraintTop_toTopOf="@+id/Img_HomeF_PlayerIcon"
            tools:text="2Wings" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycler_HomeF_EventBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/TXT_HomeF_GameList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Img_HomeF_PlayerIcon" />

        <TextView
            android:id="@+id/TXT_HomeF_GameList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GameList"
            app:layout_constraintBottom_toTopOf="@+id/Recycler_HomeF_GameList"
            app:layout_constraintStart_toStartOf="@+id/Recycler_HomeF_GameList"
            app:layout_constraintTop_toBottomOf="@+id/Recycler_HomeF_EventBanner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycler_HomeF_GameList"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/TXT_HomeF_GameNotice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TXT_HomeF_GameList">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/TXT_HomeF_GameNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GameNotice"
            app:layout_constraintBottom_toTopOf="@+id/Recycler_HomeF_GameNotice"
            app:layout_constraintStart_toStartOf="@+id/Recycler_HomeF_GameNotice"
            app:layout_constraintTop_toBottomOf="@+id/Recycler_HomeF_GameList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycler_HomeF_GameNotice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/TXT_HomeF_GameUpdateNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TXT_HomeF_GameNotice" />

        <TextView
            android:id="@+id/TXT_HomeF_GameUpdateNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GameUpdateNote"
            app:layout_constraintBottom_toTopOf="@+id/Recycler_HomeF_GameUpdateNote"
            app:layout_constraintStart_toStartOf="@+id/Recycler_HomeF_GameUpdateNote"
            app:layout_constraintTop_toBottomOf="@id/Recycler_HomeF_GameNotice" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycler_HomeF_GameUpdateNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TXT_HomeF_GameUpdateNote" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>